Add Binder playbook
With stable/0.8.x and qa/0.9.x options. Add default ES config versions
in AtoM playbooks.

--- a/playbooks/atom-xenial/vars-singlenode.yml
+++ b/playbooks/atom-xenial/vars-singlenode.yml
@@ -16,6 +16,7 @@ atom_config_db_password: "ATOMPASSWORD"
 atom_config_db_port: "3306"
 atom_es_host: "127.0.0.1"
 atom_es_port: "9200"
+atom_es_config_version: "2.5"
 atom_mysql_user_name: "atom-user"
 atom_mysql_user_pass: "ATOMPASSWORD"
 atom_mysql_user_priv: "atom.*:ALL,GRANT"
