--- a/playbooks/binder/vars-singlenode-qa.yml
+++ b/playbooks/binder/vars-singlenode-qa.yml
@@ -7,8 +7,8 @@
 #
 
 atom_path: "/usr/share/nginx/atom"
-atom_repository_url: "https://github.com/artefactual/atom.git"
-atom_repository_version: "stable/2.4.x"
+atom_repository_url: "https://github.com/artefactual/binder.git"
+atom_repository_version: "qa/0.9.x"
 atom_config_db_hostname: "127.0.0.1"
 atom_config_db_name: "atom"
 atom_config_db_username: "atom-user"
@@ -16,11 +16,23 @@ atom_config_db_password: "ATOMPASSWORD"
 atom_config_db_port: "3306"
 atom_es_host: "127.0.0.1"
 atom_es_port: "9200"
-atom_es_config_version: "2.4"
+atom_es_batch_size: "100"
+atom_es_fields_limit: "6000"
+atom_es_config_version: "2.5"
 atom_mysql_user_name: "atom-user"
 atom_mysql_user_pass: "ATOMPASSWORD"
 atom_mysql_user_priv: "atom.*:ALL,GRANT"
 atom_mysql_user_host: "%"
+atom_drmc: "yes"
+atom_drmc_es_scripts: "no"
+atom_worker_old_config: "yes"
+atom_pool_php_envs:
+  ATOM_DRMC_TMS_URL: "http://artefactual.mockable.io/tms"
+  ARCHIVEMATICA_SS_HOST: "192.168.168.192"
+  ARCHIVEMATICA_SS_PORT: "8000"
+  ARCHIVEMATICA_SS_PIPELINE_UUID: "CHANGE_ME"
+  ARCHIVEMATICA_SS_USER: "test"
+  ARCHIVEMATICA_SS_API_KEY: "CHANGE_ME"
 
 #
 # nginx role
@@ -39,7 +51,22 @@ nginx_sites:
     - root $atom_path
     - server_name _
     - client_max_body_size 72M
-    - location / { try_files $uri /index.php?$args; }
+    - location /api/docs {
+        index index.html;
+        alias $atom_path/plugins/arDrmcPlugin/frontend/docs/build/html;
+      }
+    - set $alt_request_uri $request_uri
+    - location /drmc/ {
+        error_page 404 = @drmc;
+        log_not_found off;
+        set $alt_request_uri /drmc/index;
+      }
+    - location @drmc {
+        rewrite ^/drmc/(.*)$ /index.php last;
+      }
+    - location / {
+        try_files $uri /index.php?$args;
+      }
     - location ~ /\. {
         deny all;
         return 404;
@@ -52,21 +79,10 @@ nginx_sites:
         deny all;
         return 404;
       }
-    - location ~* /uploads/r/(.*)/conf/ { }
-    - location ~* ^/uploads/r/(.*)$ {
-        include /etc/nginx/fastcgi_params;
-        set $index /index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$index;
-        fastcgi_param SCRIPT_NAME $index;
-        fastcgi_pass atom;
-      }
-    - location ~ ^/private/(.*)$ {
-        internal;
-        alias $atom_path/$1;
-      }
     - location ~ ^/(index|qubit_dev)\.php(/|$) {
         include /etc/nginx/fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param REQUEST_URI $alt_request_uri;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         fastcgi_pass atom;
       }
@@ -76,11 +92,22 @@ nginx_sites:
       }
 
 #
+# java role
+#
+
+java_packages:
+  - openjdk-8-jdk
+
+#
 # elasticsearch role
 #
 
-elasticsearch_version: "1.7.6"
-elasticsearch_heap_size: "640m"
+es_java_install: false
+es_instance_name: "atom_node"
+es_heap_size: "640m"
+es_allow_downgrades: true
+es_major_version: "5.x"
+es_version: "5.5.2"
 
 #
 # percona role
